3layer added without DI and mapping

--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Create.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeRegistration.Web.Models.Company
+﻿@model EmployeeRegistration.Domain.Contracts.ViewModels.CompanyViewModel
 @{
     ViewData["Title"] = "Create";
 }
