--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Index.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EmployeeRegistration.Web.Models.Company>
+﻿@model IEnumerable<EmployeeRegistration.Domain.Contracts.ViewModels.CompanyViewModel>
 
 @{
     ViewData["Title"] = "Index";
