--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CompanyId)
+            @Html.DisplayNameFor(model => model.Company)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CompanyId)
+            @Html.DisplayFor(model => model.Company.Name)
         </dd>
     </dl>
     
