--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Details.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CompanyId)
+            @Html.DisplayNameFor(model => model.Company)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CompanyId)
+            <a asp-action="Details" asp-controller="Company" asp-route-id="@Model.CompanyId">@Html.DisplayFor(model => model.Company.Name)</a>
         </dd>
     </dl>
 </div>
