--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Index.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Index.cshtml
@@ -28,10 +28,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>                
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Size)
+            <td>               
+                <a asp-action="CompanyEmployees" asp-controller="Employee" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Size)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Form)
