--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Create.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Create.cshtml
@@ -34,13 +34,23 @@
             </div>
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
+                <select asp-for="Position" class="form-control">
+                    <option value="Developer">Developer</option>
+                    <option value="Tester">Tester</option>
+                    <option value="Business Analyst">Business Analyst</option>
+                    <option value="Manager">Manager</option>
+                </select>
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyId" class="control-label"></label>
-                <input asp-for="CompanyId" class="form-control" />
-                <span asp-validation-for="CompanyId" class="text-danger"></span>
+                <label asp-for="Company" class="control-label"></label>
+                <select asp-for="CompanyId" class="form-control">
+                    @foreach (var company in ViewBag.Companies)
+                    {
+                        <option value="@company.Id">@company.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Company.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
