--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
@@ -39,9 +39,14 @@
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyId" class="control-label"></label>
-                <input asp-for="CompanyId" class="form-control" />
-                <span asp-validation-for="CompanyId" class="text-danger"></span>
+                <label asp-for="Company" class="control-label"></label>
+                <select asp-for="CompanyId" class="form-control">
+                    @foreach (var company in ViewBag.Companies)
+                    {
+                        <option value="@company.Id">@company.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Company.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
