--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Index.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.Position)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CompanyId)
+                @Html.DisplayNameFor(model => model.Company)
             </th>
             <th></th>
         </tr>
@@ -37,13 +37,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>                
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Surname)
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Surname)</a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SecondName)
+                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.SecondName)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Position)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CompanyId)
+                <a asp-action="Details" asp-controller="Company" asp-route-id="@item.CompanyId">@Html.DisplayFor(modelItem => item.Company.Name)</a>               
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
