--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Create.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Create.cshtml
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
