--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Edit.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Edit.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
