--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
@@ -50,8 +50,8 @@
     </dl>
     
     <form asp-action="Delete">
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
 </div>
