--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
@@ -35,7 +35,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
+                <select asp-for="Position" class="form-control">
+                    <option value="Developer">Developer</option>
+                    <option value="Tester">Tester</option>
+                    <option value="Business Analyst">Business Analyst</option>
+                    <option value="Manager">Manager</option>
+                </select>
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -56,7 +61,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default">Back to List</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
