--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Index.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -49,15 +49,15 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Position)
+                <a asp-action="PositionEmployees" asp-controller="Employee" asp-route-position="@item.Position">@Html.DisplayFor(modelItem => item.Position)</a>
             </td>
             <td>
                 <a asp-action="Details" asp-controller="Company" asp-route-id="@item.CompanyId">@Html.DisplayFor(modelItem => item.Company.Name)</a>               
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-default">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-default">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
