--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Shared/_Layout.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,11 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
-        @RenderBody()
+        <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">@RenderBody()</div>
+            <div class="col-sm-1"></div>
+        </div>
         <hr />
         <footer>
             <p>&copy; 2019 - EmployeeRegistration.Web</p>
