--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Create.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Create.cshtml
@@ -50,7 +50,7 @@
                         <option value="@company.Id">@company.Name</option>
                     }
                 </select>
-                <span asp-validation-for="Company.Name" class="text-danger"></span>
+                <span asp-validation-for="CompanyId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
