--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Delete.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Form)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Form)
+            @Html.DisplayFor(model => model.Form.Name)
         </dd>
     </dl>
     
