--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Delete.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.Position)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Position)
+            @Html.DisplayFor(model => model.Position.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Company)
