--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Employee/Edit.cshtml
@@ -35,11 +35,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <select asp-for="Position" class="form-control">
-                    <option value="Developer">Developer</option>
-                    <option value="Tester">Tester</option>
-                    <option value="Business Analyst">Business Analyst</option>
-                    <option value="Manager">Manager</option>
+                <select asp-for="PositionId" class="form-control">
+                    @foreach (var position in ViewBag.Positions)
+                    {
+                        <option value="@position.Id">@position.Name</option>
+                    }
                 </select>
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
