continue work on bugs

--- a/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Delete.cshtml
+++ b/EmployeeRegistration/EmployeeRegistration.Web/Views/Company/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Size)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Size)
+            @Model.Employees.Count()
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Form)
